﻿1.3.X (2023-07-XX)
------------------
+ Freemarker html type handler converted to new configuration model
+ Configuration stub for freemarker configuration model

1.3.1-rc.002 (2023-07-13)
------------------
+ Updated fj-core version to 8.0.11-rc.002
+ Simplified FreemarkerDocProcessConfig

1.3.1-rc.001 (2023-07-13)
------------------
+ [[fj-doc-mod-fop] add pdf/a support](https://github.com/fugerit-org/fj-doc/issues/43)

1.3.0-rc.007 (2023-07-12)
------------------
+ [New freemarker configuration model, compatibility mode](https://github.com/fugerit-org/fj-doc/issues/38)

1.3.0-rc.004 (2023-07-11)
------------------
+ fj-bom updated to 1.2.3

1.3.0-rc.001 (2023-07-09)
------------------
+ [New freemarker configuration model](https://github.com/fugerit-org/fj-doc/issues/38)

1.2.0-rc.001 (2023-07-07)
------------------
+ Added module fj-doc-lib-simpletable-import to convert xlsx or csv to simple table 

1.1.2-rc.001 (2023-07-03)
------------------
+ Updated quarkus version to 3.1.3.Final
+ Added generation time on playgroud quarkus
+ Added lombok dependency
+ Added API for AOT type handlers initialization (especially useful for libraries like apache fop) 

1.1.1-rc.001 (2023-07-02)
------------------
+ Added fj-doc bom dependencies for incubator and deprecated modules (fj-doc-ent, fj-doc-mod-pdfbox, fj-doc-mod-itext, fj-doc-mod-jxl)
+ Fix page number handling on footer / header of fj-doc-mod-fop,[[fj-doc-mod-fop] inccorect handling of &](https://github.com/fugerit-org/fj-bom/issues/35)

1.1.0-rc.001 (2023-06-25)
------------------
+ Added bom to make importing core libraries easier (fj-doc-bom-core)
+ Added bom to make importing fop pdf libraries easier (fj-doc-bom-pdf)

1.0.3-rc.002 (2023-06-15)
------------------
+ Upgrade quarkus version to 3.1.1.Final (Apache Maven 3.8.2+ needed to build)

1.0.3-rc.001 (2023-06-08)
------------------
+ [[fj-doc-mod-fop] inccorect handling of &](https://github.com/fugerit-org/fj-bom/issues/35)
+ update fj-bom version 1.1.0