@@ -1,5 +1,7 @@
 # additional config params for generate stub helper
 output=[required] path to the stub configuration to be generated
+input=[required] path to input config file in old model
+stub-handler=[default='1'] '1' to add the default handlers configuration to the stub
 stub-chain=[default='0'] '1' to add the default chain to the stub
 enable-fop-base=[default='0'] '1' will enable basic fop type handlers for .fo and .pdf formats
 enable-fop-full=[default='0'] '1' will enable full fop type handlers for custon and PDF/A .pdf format (Additional configuration may be required)
