@@ -1,0 +1,135 @@
+<doc-process>
+
+	<chain id="shared">
+		<step id="step-01" defaultBehaviour="CONTINUE"
+			description="FreeMarker Configuration step, only one FreeMarker configuration instance is created for every key under 'param01'" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerConfigStep"
+			param01="DEFAULT_CONFIG">
+			<properties 
+				version="2.3.30"
+				path="/free_marker"
+				mode="class" 
+				class="org.fugerit.java.doc.sample.facade.SampleFacade"
+				exception-handler="RETHROW_HANDLER"
+				log-exception="false"
+				wrap-unchecked-exceptions="true"
+				fallback-on-null-loop-variable="false" />
+		</step>
+		<step id="step-01" defaultBehaviour="CONTINUE"
+			description="Add custom functions" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerFunctionStep">
+			<properties 
+				messageFormat="org.fugerit.java.doc.freemarker.fun.SimpleMessageFun"
+				sumLong="org.fugerit.java.doc.freemarker.fun.SimpleSumLongFun"  />
+		</step>		
+	</chain>
+
+	<chain id="free-marker-01" extends="shared">
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Creates data necessary to FreeMarker" 
+			type="test.org.fugerit.java.doc.sample.freemarker.TestFreeMarker01DataStep"/>	
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Map items from DocContext to FreeMarker Data" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerMapStep">		
+			<properties list="userList" testBase64Img="testBase64Img"/>		
+		</step>			
+		<step id="step-process" defaultBehaviour="CONTINUE"
+			description="Apply FreeMarker template to get the full XML" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerProcessStep"
+			param01="test_01.ftl"/>
+	</chain>
+
+	<chain id="free-marker-01-fop" extends="free-marker-01">
+	</chain>
+
+	<chain id="free-marker-test-fop-font" extends="shared">
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Creates data necessary to FreeMarker" 
+			type="test.org.fugerit.java.doc.sample.freemarker.TestFreeMarker01DataStep"/>	
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Map items from DocContext to FreeMarker Data" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerMapStep">		
+			<properties list="userList" testBase64Img="testBase64Img"/>		
+		</step>			
+		<step id="step-process" defaultBehaviour="CONTINUE"
+			description="Apply FreeMarker template to get the full XML" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerProcessStep"
+			param01="test_fop_font.ftl"/>
+	</chain>
+
+	<chain id="full-facade-01" extends="free-marker-01">
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Creates data necessary to FreeMarker" 
+			type="test.org.fugerit.java.doc.sample.freemarker.TestFreeMarker01DataStep"/>	
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Map items from DocContext to FreeMarker Data" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerMapStep">		
+			<properties list="userList" />		
+		</step>			
+		<step id="step-process" defaultBehaviour="CONTINUE"
+			description="Apply FreeMarker template to get the full XML" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerProcessStep"
+			param01="test_01.ftl"/>
+	</chain>
+
+	<chain id="free-marker-02" extends="shared">
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Creates data necessary to FreeMarker" 
+			type="test.org.fugerit.java.doc.sample.freemarker.TestFreeMarker01DataStep"/>	
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Map items from DocContext to FreeMarker Data" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerMapStep">		
+			<properties list="userList" />		
+		</step>			
+		<step id="step-process" defaultBehaviour="CONTINUE"
+			description="Apply FreeMarker template to get the full XML" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerProcessStep"
+			param01="test_02.ftl"/>
+	</chain>
+
+	<chain id="free-marker-color-test" extends="shared">
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Creates data necessary to FreeMarker" 
+			type="test.org.fugerit.java.doc.sample.freemarker.TestFreeMarker01DataStep"/>	
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Map items from DocContext to FreeMarker Data" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerMapStep">		
+			<properties list="userList" />		
+		</step>			
+		<step id="step-process" defaultBehaviour="CONTINUE"
+			description="Apply FreeMarker template to get the full XML" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerProcessStep"
+			param01="color_test.ftl"/>
+	</chain>
+
+	<chain id="free-marker-format-test" extends="shared">
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Creates data necessary to FreeMarker" 
+			type="test.org.fugerit.java.doc.sample.freemarker.TestFreeMarker01DataStep"/>	
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Map items from DocContext to FreeMarker Data" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerMapStep">		
+			<properties list="userList" />		
+		</step>			
+		<step id="step-process" defaultBehaviour="CONTINUE"
+			description="Apply FreeMarker template to get the full XML" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerProcessStep"
+			param01="format_test.ftl"/>
+	</chain>
+
+	<chain id="basic" extends="shared">
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Creates data necessary to FreeMarker" 
+			type="test.org.fugerit.java.doc.sample.freemarker.TestFreeMarker01DataStep"/>	
+		<step id="step-data" defaultBehaviour="CONTINUE"
+			description="Map items from DocContext to FreeMarker Data" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerMapStep">		
+			<properties  list="userList" />		
+		</step>
+		<step id="step-process" defaultBehaviour="CONTINUE"
+			description="Apply FreeMarker template to get the full XML" 
+			type="org.fugerit.java.doc.freemarker.config.FreeMarkerProcessStep"
+			param01="basic.ftl"/>
+	</chain>
+
+</doc-process>
