@@ -1,0 +1,5 @@
+# test params for generate stub
+tool=convert-config
+input=src/test/resources/conver-config-test/fop-process-config.xml
+output=target/fop-new-process-config.xml
+stub-handler=0
