@@ -1,0 +1,3 @@
+# test params for generate stub
+tool=convert-config
+help=
