@@ -1,0 +1,8 @@
+# test params for generate stub
+tool=convert-config
+input=src/test/resources/conver-config-test/doc-process-sample.xml
+output=target/sample-new-process-config.xml
+enable-opencsv=1
+enable-fop-base=1
+enable-fop-full=0
+enable-poi=1
