@@ -1,3 +1,4 @@
 # test params for generate stub
 tool=generate-stub
 output=target/freemarker-doc-config-stub-001.xml
+stub-chain=1
