@@ -1,6 +1,7 @@
 # test params for generate stub
 tool=generate-stub
 output=target/freemarker-doc-config-stub-002.xml
+stub-chain=1
 config-id=FJ_DOC_STUB_002
 fm-version=2.3.31
 fm-template-path=/free_marker/
