@@ -2,6 +2,8 @@
 ------------------
 + Freemarker html type handler converted to new configuration model
 + Configuration stub for freemarker configuration model
++ Tool for stub generation (new maven module fj-doc-tool)
++ Tool converting old config model to new one (new maven module fj-doc-tool)
 
 1.3.1-rc.002 (2023-07-13)
 ------------------
